--- a/compare-selectors/todo.txt
+++ b/compare-selectors/todo.txt
@@ -1,4 +1,4 @@
-fix bug that doesn't let you zoom in/out when only mcp or par is selected. only appeared after I added them both
+fix bug that doesn't let you zoom in/out when only mcp or par is selected. only appeared after I added them both -- done
 let users load their own RData or any other files with algorithm selection results
 let users load their own scenarios
 add more visualization options
