--- a/compare-selectors/todo.txt
+++ b/compare-selectors/todo.txt
@@ -1,9 +1,9 @@
 fix bug that doesn't let you zoom in/out when only mcp or par is selected. only appeared after I added them both -- done
 refactor code
 let users load their own RData or any other files with algorithm selection results
-let users load their own scenarios
+let users load their own scenarios -- done
 add more visualization options
-add virtual best and single best solver statistics to the plot. also add mean mcp and par10 scores for each selector
+add virtual best and single best solver statistics to the plot. also add mean mcp and par10 scores for each selector -- done
 add more interesting theme
 add colorblind friendly colors
 maybe even remove par10 scores
