found bug -- plot label and text not updating when selecting par10

--- a/compare-selectors/todo.txt
+++ b/compare-selectors/todo.txt
@@ -7,3 +7,4 @@ add virtual best and single best solver statistics to the plot. also add mean mc
 add more interesting theme
 add colorblind friendly colors
 maybe even remove par10 scores
+bug with not updating title and text for plot
