cleaned up code

--- a/compare-selectors/todo.txt
+++ b/compare-selectors/todo.txt
@@ -8,3 +8,4 @@ add more interesting theme
 add colorblind friendly colors
 maybe even remove par10 scores
 bug with not updating title and text for plot
+add loading animations
